feat: implement api controller for approval
