# backend/src/main/java/org/eclipse/tractusx/puris/backend/dataexchangeapproval/controller/DataExchangeApprovalController.java
@@ -17,18 +17,26 @@ under the License.
 SPDX-License-Identifier: Apache-2.0
 */
 package org.eclipse.tractusx.puris.backend.dataexchangeapproval.controller;
+import java.util.List;
 import java.util.UUID;
+import java.util.concurrent.ExecutorService;
+import java.util.stream.Collectors;
 
 import javax.management.openmbean.KeyAlreadyExistsException;
 
 import org.eclipse.tractusx.puris.backend.dataexchangeapproval.domain.model.OwnDataExchangeApproval;
+import org.eclipse.tractusx.puris.backend.dataexchangeapproval.domain.model.ReportedDataExchangeApproval;
 import org.eclipse.tractusx.puris.backend.dataexchangeapproval.logic.dto.DataExchangeApprovalDto;
+import org.eclipse.tractusx.puris.backend.dataexchangeapproval.logic.service.DataExchangeApprovalApiService;
 import org.eclipse.tractusx.puris.backend.dataexchangeapproval.logic.service.OwnDataExchangeApprovalService;
+import org.eclipse.tractusx.puris.backend.dataexchangeapproval.logic.service.ReportedDataExchangeApprovalService;
 import org.eclipse.tractusx.puris.backend.dataexchangerequest.domain.model.ReportedDataExchangeRequest;
 import org.eclipse.tractusx.puris.backend.dataexchangerequest.logic.service.ReportedDataExchangeRequestService;
+import org.eclipse.tractusx.puris.backend.masterdata.domain.model.Partner;
 import org.modelmapper.ModelMapper;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
@@ -54,9 +62,15 @@ public class DataExchangeApprovalController {
     @Autowired
     private ReportedDataExchangeRequestService reportedDataExchangeRequestService;
     @Autowired
+    private ReportedDataExchangeApprovalService reportedDataExchangeApprovalService;
+    @Autowired
+    private DataExchangeApprovalApiService dataExchangeApprovalApiService;
+    @Autowired
     private ModelMapper modelMapper;
+    @Autowired
+    private ExecutorService executorService;
 
-    @PostMapping("/{id}/approval")
+    @PostMapping("reported/{id}/approval")
     @ResponseBody
     @Operation(summary = "Creates a new own data exchange approval", description = "Creates a new own data exchange approval. \n")
     @ApiResponses(value = {
@@ -73,12 +87,14 @@ public class DataExchangeApprovalController {
         if (reportedRequest == null) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Referenced reported data exchange request does not exist.");
         }
+        Partner partner = reportedRequest.getNotification().getPartner();
 
         OwnDataExchangeApproval ownDataExchangeApproval = modelMapper.map(requestDto, OwnDataExchangeApproval.class);
         ownDataExchangeApproval.setDataExchangeRequest(reportedRequest);
 
         try {
             OwnDataExchangeApproval newEntity = ownDataExchangeApprovalService.create(ownDataExchangeApproval);
+            executorService.submit(() -> dataExchangeApprovalApiService.sendDataExchangeApproval(newEntity, partner));
             DataExchangeApprovalDto responseDto = modelMapper.map(newEntity, DataExchangeApprovalDto.class);
             responseDto.setDataExchangeRequestId(reportedRequest.getUuid());
             return responseDto;
@@ -87,6 +103,19 @@ public class DataExchangeApprovalController {
         } catch (IllegalArgumentException e) {
             throw new ResponseStatusException(HttpStatus.BAD_REQUEST, "Own Data Exchange Approval is invalid." + e.getMessage());
         }
+    }
+
+    @GetMapping("{id}/approval")
+    @ResponseBody
+    @Operation(summary = "Get all reported data exchange approvals", description = "Get all reported data exchange approvals.")
+    public List<DataExchangeApprovalDto> getAllReportedDataExchangeApprovals() {
+        return reportedDataExchangeApprovalService.findAll().stream().map(this::convertToDto).collect(Collectors.toList());
+    }
+
+    private DataExchangeApprovalDto convertToDto(ReportedDataExchangeApproval entity) {
+        DataExchangeApprovalDto dto = modelMapper.map(entity, DataExchangeApprovalDto.class);
+        dto.setDataExchangeRequestId(entity.getDataExchangeRequest().getUuid());
+        return dto;
     }
     
 }
