# docs/api/openAPI.yaml
@@ -1718,6 +1718,35 @@ paths:
           description: OK
       tags:
       - partner-data-update-batch-controller
+  /data-exchange-approval/request:
+    post:
+      operationId: postDataExchangeApproval
+      parameters:
+      - in: header
+        name: edc-bpn
+        required: true
+        schema:
+          additionalProperties: false
+          maxItems: 50
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JsonNode'
+              additionalProperties: false
+        required: true
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
+      summary: 'This endpoint receives the DataExchangeApproval 1.0.0 requests. This
+        endpoint is meant to be accessed by partners via EDC only. '
+      tags:
+      - data-exchange-approval-api-controller
   /data-exchange-request:
     post:
       description: "Creates a new own data exchange request. \n"
@@ -1764,36 +1793,7 @@ paths:
       summary: Get all reported data exchange requests
       tags:
       - data-exchange-request-controller
-  /data-exchange-request/request:
-    post:
-      operationId: postDataExchangeRequest
-      parameters:
-      - in: header
-        name: edc-bpn
-        required: true
-        schema:
-          additionalProperties: false
-          maxItems: 50
-          type: string
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/JsonNode'
-              additionalProperties: false
-        required: true
-      responses:
-        '200':
-          description: Ok
-        '400':
-          description: Bad Request
-        '500':
-          description: Internal Server Error
-      summary: 'This endpoint receives the DataExchangeRequest 1.0.0 requests. This
-        endpoint is meant to be accessed by partners via EDC only. '
-      tags:
-      - data-exchange-request-api-controller
-  /data-exchange-request/{id}/approval:
+  /data-exchange-request/reported/{id}/approval:
     post:
       description: "Creates a new own data exchange approval. \n"
       operationId: createDataExchangeApproval
@@ -1828,6 +1828,53 @@ paths:
         '500':
           description: Internal Server Error.
       summary: Creates a new own data exchange approval
+      tags:
+      - data-exchange-approval-controller
+  /data-exchange-request/request:
+    post:
+      operationId: postDataExchangeRequest
+      parameters:
+      - in: header
+        name: edc-bpn
+        required: true
+        schema:
+          additionalProperties: false
+          maxItems: 50
+          type: string
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/JsonNode'
+              additionalProperties: false
+        required: true
+      responses:
+        '200':
+          description: Ok
+        '400':
+          description: Bad Request
+        '500':
+          description: Internal Server Error
+      summary: 'This endpoint receives the DataExchangeRequest 1.0.0 requests. This
+        endpoint is meant to be accessed by partners via EDC only. '
+      tags:
+      - data-exchange-request-api-controller
+  /data-exchange-request/{id}/approval:
+    get:
+      description: Get all reported data exchange approvals.
+      operationId: getAllReportedDataExchangeApprovals
+      responses:
+        '200':
+          content:
+            '*/*':
+              schema:
+                additionalProperties: false
+                items:
+                  $ref: '#/components/schemas/DataExchangeApprovalDto'
+                maxItems: 50
+                type: array
+          description: OK
+      summary: Get all reported data exchange approvals
       tags:
       - data-exchange-approval-controller
   /days-of-supply/customer:
